--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,10 @@
       "@utils/*": ["./src/utils/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "babel.config.js"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "babel.config.js",
+    "declaration.d.ts"
+  ]
 }
