--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,15 +5,15 @@
     "strict": true,
     "moduleResolution": "bundler",
     "types": ["react-native", "react", "node"],
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
       "@assets/*": ["./src/assets/*"],
-      "@hooks/*": ["./src/hooks/*"],
+      "@hooks/*": ["./src/shared/hooks/*"],
       "@navigator/*": ["./src/navigator/*"],
       "@shared/*": ["./src/shared/*"],
       "@features/*": ["./src/features/*"],
       "@store/*": ["./src/store/*"],
-      "@utils/*": ["./src/utils/*"],
+      "@utils/*": ["./src/shared/utils/*"],
       "@types": ["./src/shared/types/index.ts"]
     },
     "isolatedModules": true
