--- a/package.json
+++ b/package.json
@@ -6,14 +6,21 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "start": "react-native start",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --coverage --watchAll=false --maxWorkers=2",
+    "test:update": "jest --updateSnapshot",
+    "type-check": "tsc --noEmit",
     "prepare": "husky"
   },
   "dependencies": {
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-safe-area-context": "^5.4.1",
     "react-native-svg": "^15.11.2",
     "snyk": "^1.1297.1"
   },
@@ -28,6 +35,8 @@
     "@react-native/eslint-config": "0.79.2",
     "@react-native/metro-config": "0.79.2",
     "@react-native/typescript-config": "0.79.2",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
     "@types/react-test-renderer": "^19.0.0",
@@ -41,6 +50,7 @@
     "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-native": "^5.0.0",
+    "eslint-plugin-testing-library": "^7.2.2",
     "husky": "^9.1.7",
     "jest": "^29.6.3",
     "lint-staged": "^15.5.2",
