--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "babel.config.js",
-    "declaration.d.ts"
+    "declaration.d.ts",
+    "__tests__/Chip.test.tsx"
   ]
 }
