--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typo-checker": "typo-checker"
   },
   "dependencies": {
+    "@react-native-clipboard/clipboard": "^1.16.2",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "^2.25.0",
